# voice-master

./: .gitignore  AGENT_SETUP.md  LICENSE  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vite.config.web.ts
.agents/: AGENTS.md
backend/: config.py  database.py  main.py  mcp_server.py  pyproject.toml  requirements-base.txt  requirements-cpu.txt
backend/adapters/: base.py  elevenlabs_adapter.py  vieneu_adapter.py
backend/models/: schemas.py
backend/routers/: diagnostics.py  health.py  history.py  license.py  models.py  settings.py  tts.py  voices.py
backend/scripts/: agent_smoke.py
backend/services/: job_queue.py  license_core.py  license_service.py  machine_id.py  model_manager.py  text_pipeline.py  trial.py  voice_registry.py
backend/tests/: mcp_http_verify.py  mcp_verify.py  smoke.py  test_audio_utils.py  test_license.py  test_mcp_agent_flow.py  test_mcp_contract.py  test_text_pipeline.py  test_tts_jobs.py  test_voice_registry.py
backend/utils/: audio.py  gpu.py  markdown_cleaner.py  security.py
docs/: agent-api-plan.md  agent-api.md  build-exe.md  feature-plan-model-download.md  huong-dan-su-dung.md  licensing-packaging-spec.md  licensing-plan.md  packaging-share-plan.md
docs/images/: README.md
electron/: main.ts  preload.ts
scripts/: build_backend_runtime.ps1  build_portable.ps1  build_release.ps1  chrome-debug.js  dev_all.ps1  dev_backend.ps1  dev_ui.ps1  ensure-chrome-debug.js  install_autostart.ps1  setup.ps1  start_backend_detached.ps1  status_backend.ps1  stop_backend.ps1
src/: App.tsx  index.css
src/components/: AgentConnect.tsx  CreateVoice.tsx  Diagnostics.tsx  History.tsx  (+5 more)
tests/: test_browser.js  test_browser.py  test_gate.py
tools/: README.md  license_gen.py  license_keygen.py
(+10 files in other folders)
