[project]
name = "neo-voice-backend"
version = "1.0.0.dev1"
description = "NEO Voice Local TTS — FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "keyring>=25.2.0",
    "python-multipart>=0.0.9",
    "mcp>=1.28.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
